Bug 448673. Make sure the progress timer is cancelled properly. r+sr=roc